--- a/index.html
+++ b/index.html
@@ -27,24 +27,6 @@
   
   <!-- TWEET -->
   <script language="javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
-  <script language="javascript" src="js/jquery.tweet.js" type="text/javascript"></script>
-
-  <script type='text/javascript'>
-    jQuery(function($){
-        $(".tweet").tweet({
-            username: "hoffergabor",
-            join_text: "auto",
-            avatar_size: 0,
-            count: 2,
-            auto_join_text_default: "", 
-            auto_join_text_ed: "",
-            auto_join_text_ing: "",
-            auto_join_text_reply: "",
-            auto_join_text_url: "",
-            loading_text: "loading tweets..."
-        });
-    });
-  </script>
 
 </head>
 <body>
@@ -60,9 +42,10 @@
     </div>
     <div class="three columns">
       <h3><a href="https://twitter.com/hoffergabor" target="_blank"></a>@hoffergabor</h3>
-      <p><div class="tweet"></div>
-        <!--<a class="twitter-timeline" href="https://twitter.com/hoffergabor" data-widget-id="322639210727219200">Tweets by @hoffergabor</a>
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>-->
+      <p>
+        <a class="twitter-timeline" href="https://twitter.com/hoffergabor" data-widget-id="322639210727219200">Tweets by @hoffergabor</a>
+        
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
       </p>
     </div>
     <div class="three columns">
