--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
     </div>
     <div class="three columns">
       <h3>You missed</h3>
+      <p><strong>13th NOV</strong><br><a href="http://app.hwsw.hu" target="_blank">App!mobile 2013 / UX sessions</a></p>
       <p><strong>25th APR</strong><br>iOS Meetup <a href="http://www.meetup.com/budapest-iosMeetup/events/110496192/" target="_blank">April</a></p>
       <p><strong>21st MAR</strong><br>iOS Meetup <a href="http://www.meetup.com/budapest-iosMeetup/events/106662242/" target="_blank">March</a></p>
       <p><strong>16th FEB</strong><br>Kürt Akadémia / III. SAM<br><a href="http://www.kurt-akademia.hu/kepzeseink/smartmobil/sam/sam-naplo/" target="_blank">WYDIWYG</a></p>
     </div>
     <div class="three columns">
       <h3>Let's meet</h3>
+      <p><strong>29th NOV</strong><br>Kürt Akadémia / <a href="http://www.kurt-akademia.hu/hu/kepzesek/3/smartmobil_kepzes/oktatok" target="_blank">SmartMobile course</a></p>
       <p><strong>SOMETIMES</strong><br>You can find me at Prezi's San Francisco office.</p>
       <p><strong>ANYTIME</strong><br>Meet me at Prezi's amazing Budapest office. (Don't forget to tell me before)</p>
     </div>
