--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
   <div class="row feed">
     <div class="three columns">
       <h3>I'm working on</h3>
-      <p>soon to be added...</p>
+      <p>Super secret Prezi stuff... :)</p>
+      <p>My Belgian Saison to enter a competition in 2014</p>
     </div>
   </div>
 
