--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
   <!-- Set the viewport width to device width for mobile -->
   <meta name="viewport" content="width=device-width" />
 
-  <title>:uzem</title>
-  
-  <!-- Included CSS Files (Uncompressed) -->
-  <!--
-  <link rel="stylesheet" href="css/foundation.css">
-  -->
+  <title>:uzem // Gábor Hoffer // designer @ Prezi.com</title>
+  <meta name="description" content="Personal webpage of Gábor Hoffer, designer @ Prezi.com, homebrewer and singer of Dokkerman and the Turkeying Fellaz.">
+  <link rel="author" href="http://www.linkedin.com/pub/gábor-hoffer/52/897/b30">
+  <link rel="publisher" href="http://www.linkedin.com/pub/gábor-hoffer/52/897/b30">
+
+  <!-- opengraph metatags -->
+  <meta property="og:title" content=":uzem // Gábor Hoffer // designer @ Prezi.com">
+  <meta property="og:image" content="/img/gabor.hoffer.png">
+  <meta property="og:description" content="Personal webpage of Gábor Hoffer, designer @ Prezi.com, homebrewer and singer of Dokkerman and the Turkeying Fellaz.">
+
+  <!-- twitter metatags -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content=":uzem // Gábor Hoffer // designer @ Prezi.com">
+  <meta name="twitter:description" content="Personal webpage of Gábor Hoffer, designer @ Prezi.com, homebrewer and singer of Dokkerman and the Turkeying Fellaz.">
+  <meta name="twitter:image" content="/img/gabor.hoffer.png">
   
   <!-- Google fonts CSS Files (Compressed) -->
   <link href='http://fonts.googleapis.com/css?family=Karla:400,700,400italic' rel='stylesheet' type='text/css'>
@@ -25,7 +34,7 @@
 
   <script src="js/modernizr.foundation.js"></script>
   
-  <!-- TWEET -->
+  <!-- Jquery -->
   <script language="javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
 
 </head>
@@ -41,7 +50,7 @@
       <h4>I'm Gábor</h4>
     </div>
     <div class="three columns">
-      <h3><a href="https://twitter.com/hoffergabor" target="_blank"></a>@hoffergabor</h3>
+      <h3><a href="https://twitter.com/hoffergabor" target="_blank" title="@hoffergabor"></a>@hoffergabor</h3>
       <p>
         <a class="twitter-timeline" href="https://twitter.com/hoffergabor" data-widget-id="322639210727219200">Tweets by @hoffergabor</a>
         
@@ -104,8 +113,8 @@
       <ul>
         <li><a href="http://prezi.com/about/gabor-hoffer/" target="_blank">prezi.com/about/gabor-hoffer</a></li>
         <li><a href="mailto:hoffergabor@gmail.com">hoffergabor@gmail.com</a></li>
-        <li><strong>LINKEDIN</strong> / <a href="mailto:hoffergabor@gmail.com">hoffergabor</a></li>
-        <li><strong>TWITTER</strong> / <a href="mailto:hoffergabor@gmail.com">@hoffergabor</a></li>
+        <li><strong>LINKEDIN</strong> / <a href="http://www.linkedin.com/pub/gábor-hoffer/52/897/b30">hoffergabor</a></li>
+        <li><strong>TWITTER</strong> / <a href="https://twitter.com/hoffergabor">@hoffergabor</a></li>
       </ul>
     </div>
   </div></div>
