--- a/index.html
+++ b/index.html
@@ -78,6 +78,18 @@
       <p>Super secret Prezi stuff... :)</p>
       <p>My Belgian Saison to enter a competition in 2014</p>
     </div>
+    <div class="three columns">
+      <h3>I spoke on SmartMobile</h3>
+      <p><iframe width="100%" height="200" src="http://www.youtube.com/embed/e6PiLrbo8zo?rel=0" frameborder="0" allowfullscreen></iframe></p>
+    </div>
+    <div class="three columns">
+      <h3>I spoke on HWSW's App!2013</h3>
+      <p><iframe width="100%" height="200" src="http://www.youtube.com/embed/5MimZQtH3YU?rel=0" frameborder="0" allowfullscreen></iframe></p>
+    </div>
+    <div class="three columns">
+      <h3>I entertain in Dokkerman</h3>
+      <p><iframe width="100%" height="200" src="http://www.youtube.com/embed/WW_8xDH4J7Q?rel=0" frameborder="0" allowfullscreen></iframe></p>
+    </div>
   </div>
 
   <div class="footer"><div class="row">
