dokkerman url change

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <li><strong>DESIGN</strong> / UI, IxD, print, web</li>
         <li><strong>CODE</strong> / too many to list...</li>
         <li><strong>BREW</strong> / beer</li>
-        <li><strong>SING</strong> / <a href="http://www.dokkerman.hu" target="_blank">Dokkerman</a></li>
+        <li><strong>SING</strong> / <a href="http://www.dokkerman.com" target="_blank">Dokkerman</a></li>
       </ul>
     </div>
     <div class="three columns">
