Changing font and trying less.js

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8"/>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Domine|Montserrat">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One|Ubuntu+Mono">
   <link rel="stylesheet/less" type="text/css" href="css/uzem.less">
-  <link rel="stylesheet" type="text/css" href="css/uzem.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Gábor Hoffer // lead designer @ Prezi.com</title>
