--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
     <h3><a href="https://www.linkedin.com/in/hoffergabor" target="_blank">LinkedIn</a> — <a href="mailto:hoffergabor@gmail.com" target="_blank">hoffergabor@gmail.com</a></h3>
   </header>
 
+  <timeline>
+    <div class="line"></div>
+    <div class="yearmarkers">
+    </div>
+  </timeline>
+
   <script type="text/javascript">
     window.onload = function() { tabletop() };
 
