Adding year markers

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
   <timeline>
     <div class="line"></div>
     <div class="yearmarkers">
+      <year>
+        <span>2017...</span>
+      </year>
     </div>
   </timeline>
 
