Adding more years for testing

--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
       <year>
         <span>2017...</span>
       </year>
+      <year>
+        <span>2016</span>
+      </year>
+      <year>
+        <span>2015</span>
+      </year>
+      <year>
+        <span>2014</span>
+      </year>
     </div>
   </timeline>
 
