--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     }
 
     function showInfo(data, tabletop) {
-      var years = []
+      var years = [];
       console.log("https://docs.google.com/spreadsheets/d/1RgOnd5MqT14eQLNfiG_UMJXt3AFWRT-1S_VNOTMTots/pubhtml")
       if (data.length > 0) {
         console.log("Loading references...");
