--- a/index.html
+++ b/index.html
@@ -71,24 +71,15 @@
     }
 
     function showInfo(data, tabletop) {
-      var yearsArray = [];
       console.log("https://docs.google.com/spreadsheets/d/1RgOnd5MqT14eQLNfiG_UMJXt3AFWRT-1S_VNOTMTots/pubhtml")
       if (data.length > 0) {
-        console.log("Loading references...");
-        console.log("#####################################");
+        console.log("Loading references...")
+        console.log("#####################################")
         for (i = 0; i < data.length; i++) {
           var reference = data[i];
-          console.log(reference.name + " - loaded");
-          yearNotIn = yearsArray.indexOf(reference.year)
-          if yearNotIn == -1 {
-            yearsArray.push(reference.year);
-            console.log(reference.year + " - added");
-          }
+          console.log(reference.name + " - loaded from - " + reference.year)
         }
-        less.modifyVars({
-          '@numberofyears': years.length;
-        });
-        console.log("#####################################");
+        console.log("#####################################")
       } else {
         console.warn('No references found in spreadsheet.');
       }
