--- a/index.html
+++ b/index.html
@@ -44,40 +44,40 @@
   <timeline>
     <div class="line"></div>
     <div class="yearmarkers">
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
-      <year><span></span></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
+      <year></year>
     </div>
   </timeline>
 
