Adding details to the references

--- a/index.html
+++ b/index.html
@@ -101,7 +101,10 @@
         for (i = 0; i < data.length; i++) {
           var reference = data[i];
           console.log(reference.name + " - loaded from - " + reference.year);
-          $( "." + reference.year ).append( "<p>" + reference.name + "</p>" );
+          $( "." + reference.year ).append(
+            "<reference class='" + reference.month + "'><date>" + reference.date +
+            "</date><h3>" + reference.name + "</h3><p>" + reference.desc +
+            "</p></reference>" );
         }
         console.log("#####################################");
       } else {
