--- a/index.html
+++ b/index.html
@@ -102,10 +102,9 @@
           var reference = data[i];
           console.log(reference.name + " - loaded from - " + reference.year);
           $( "." + reference.year ).append(
-            "<reference class='offset-" + reference.month + "'><date>" + reference.date +
+            "<reference class='offset-" + reference.month + " odd-" + i % 2 + "'><date>" + reference.date +
             "</date><h3>" + reference.name + "</h3><p>" + reference.desc +
             "</p></reference>" );
-          if (i % 2 == 0) $( "." + reference.year ).addClass("odd");
         }
         console.log("#####################################");
       } else {
