Playing with font sizes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <header>
     <h1>Gábor Hoffer</h1>
-    <h2>Lead Product Designer @ <a href="http://prezi.com/" target="_blank">Prezi.com</a></h2>
+    <h2>product deaign lead @ <a href="http://prezi.com/" target="_blank">Prezi.com</a>, designer, manager, teacher.</h2>
     <h3><a href="https://www.linkedin.com/in/hoffergabor" target="_blank">LinkedIn</a> — <a href="mailto:hoffergabor@gmail.com" target="_blank">hoffergabor@gmail.com</a></h3>
   </header>
 
