Adding an emoji because why not :)

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
 
   <header>
-    <h1>Gábor Hoffer</h1>
+    <h1>Gábor Hoffer 🔥</h1>
     <h2>product deaign lead @ <a href="http://prezi.com/" target="_blank">Prezi.com</a><br />designer - manager - teacher</h2>
     <h3><a href="https://www.linkedin.com/in/hoffergabor" target="_blank">LinkedIn</a> — <a href="mailto:hoffergabor@gmail.com" target="_blank">hoffergabor@gmail.com</a></h3>
   </header>
