--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
   <header>
     <h1>Gábor Hoffer</h1>
-    <h2>product design lead @ <a href="http://prezi.com/" target="_blank">Prezi.com</a><br />designer - manager - teacher - 🔥</h2>
+    <h2>product design lead @ <a href="http://prezi.com/" target="_blank">Prezi.com</a>
+      <br />designer - manager - teacher - flame</h2>
     <h3><a href="https://www.linkedin.com/in/hoffergabor" target="_blank">LinkedIn</a> -
         <a href="https://medium.com/@hoffergabor" target="_blank">Medium</a> —
         <a href="https://twitter.com/@hoffergabor" target="_blank">Twitter</a> —
