Adding type as a class

--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
           var reference = data[i];
           console.log(reference.name + " - loaded from - " + reference.year);
           $( "." + reference.year ).append(
-            "<reference class='offset-" + reference.month + " odd-" + i % 2 + "'><date>" + reference.date +
+            "<reference class='offset-" + reference.month + " odd-" + i % 2 +
+            " " + reference.type + 
+            "'><date>" + reference.date +
             "</date><h3>" + reference.name + "</h3><p>" + reference.desc +
             " <a href='" + reference.url + "' target='_blank'>☛" +
             "</p></reference>" );
