--- a/index.html
+++ b/index.html
@@ -106,8 +106,10 @@
           var reference = data[i];
           console.log(reference.name + " - loaded from - " + reference.year);
           $( "." + reference.year ).append(
-            "<reference class='offset-" + reference.month + " odd-" + i % 2 +
-            " " + reference.type + 
+            "<reference class='offset-" + reference.month +
+            " erayear-" + if (reference.yearend != NULL) {reference.yearend-reference.year} +
+            " eramonth-" + if (reference.monthend != NULL) {reference.monthend-reference.month} + 
+            " odd-" + i % 2 + " " + reference.type +
             "'><date>" + reference.date +
             "</date><h3>" + reference.name + "</h3><p>" + reference.desc +
             " <a href='" + reference.url + "' target='_blank'>☛" +
