--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         for (i = 0; i < data.length; i++) {
           var reference = data[i];
           console.log(reference.name + " - loaded from - " + reference.year);
-          if (reference.era != "") {
+          if (reference.era == "") {
             $( "." + reference.year ).append(
               "<reference class='offset-" + reference.month +
               " era-" + reference.era +
@@ -123,10 +123,8 @@
               "<era class='offset-" + reference.month +
               " era-" + reference.era +
               " odd-" + i % 2 + " " + reference.type +
-              "'><date>" + reference.date +
-              "</date><h3>" + reference.name + "</h3><p>" + reference.desc +
-              " <a href='" + reference.url + "' target='_blank'>☛" +
-              "</p></reference>" );
+              "'><date>" + reference.date + " - " + reference.name +
+              "</date></era>" );
           }
         }
         console.log("#####################################");
