--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <meta charset="utf-8"/>
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One|Ubuntu+Mono">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One">
   <link rel="stylesheet/less" type="text/css" href="css/uzem.less">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
