--- a/index.html
+++ b/index.html
@@ -45,6 +45,47 @@
         <a href="mailto:hoffergabor@gmail.com" target="_blank">Email</a></h3>
   </header>
 
+  <timeline>
+    <div class="line"></div>
+    <div class="yearmarkers">
+      <year class="2017"></year>
+      <year class="2016"></year>
+      <year class="2015"></year>
+      <year class="2014"></year>
+      <year class="2013"></year>
+      <year class="2012"></year>
+      <year class="2011"></year>
+      <year class="2010"></year>
+      <year class="2009"></year>
+      <year class="2008"></year>
+      <year class="2007"></year>
+      <year class="2006"></year>
+      <year class="2005"></year>
+      <year class="2004"></year>
+      <year class="2003"></year>
+      <year class="2002"></year>
+      <year class="2001"></year>
+      <year class="2000"></year>
+      <year class="1999"></year>
+      <year class="1998"></year>
+      <year class="1997"></year>
+      <year class="1996"></year>
+      <year class="1995"></year>
+      <year class="1994"></year>
+      <year class="1993"></year>
+      <year class="1992"></year>
+      <year class="1991"></year>
+      <year class="1990"></year>
+      <year class="1989"></year>
+      <year class="1988"></year>
+      <year class="1987"></year>
+      <year class="1986"></year>
+      <year class="1985"></year>
+      <year class="1984"></year>
+      <year class="1983"></year>
+    </div>
+  </timeline>
+
   <script type="text/javascript">
 
     less.watch();
