--- a/index.html
+++ b/index.html
@@ -90,6 +90,50 @@
 
     less.watch();
 
+    window.onload = function() { tabletop() };
+
+    var references = 'https://docs.google.com/spreadsheets/d/1RgOnd5MqT14eQLNfiG_UMJXt3AFWRT-1S_VNOTMTots/pubhtml';
+
+    function tabletop() {
+      Tabletop.init( { key: references,
+                       callback: showInfo,
+                       simpleSheet: true } )
+    }
+
+    function showInfo(data, tabletop) {
+      console.log("https://docs.google.com/spreadsheets/d/1RgOnd5MqT14eQLNfiG_UMJXt3AFWRT-1S_VNOTMTots/pubhtml")
+      if (data.length > 0) {
+        console.log("Loading references...");
+        console.log("#####################################");
+        for (i = 0; i < data.length; i++) {
+          var reference = data[i];
+          console.log(reference.name + " - loaded from - " + reference.year);
+          if (reference.era == "") {
+            $( "." + reference.year ).append(
+              "<reference class='offset-" + reference.month +
+              " era-" + reference.era +
+              " odd-" + i % 2 + " " + reference.type +
+              "'><date>" + reference.date +
+              "</date><h3>" + reference.name + "</h3><p>" + reference.desc +
+              " <a href='" + reference.url + "' target='_blank'>☛" +
+              "</p></reference>" );
+          }
+          else {
+            $( "." + reference.year ).append(
+              "<era class='offset-" + reference.month +
+              " era-" + reference.era +
+              " odd-" + i % 2 + " " + reference.type +
+              "'><date>" + reference.date + " - " + reference.name +
+              "</date></era>" );
+          }
+        }
+        console.log("#####################################");
+      } else {
+        console.warn('No references found in spreadsheet.');
+      }
+
+    }
+
   </script>
 
 </body>
