--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               " odd-" + i % 2 + " " + reference.type +
               "'><date>" + reference.date +
               "</date><h3>" + reference.name + "</h3><p>" + reference.desc +
-              " <a href='" + reference.url + "' target='_blank'>☛" +
+              " <a href='" + reference.url + "' target='_blank'>" +
               "</p></reference>" );
           }
           else {
