Adding next year

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   <timeline>
     <div class="line"></div>
     <div class="yearmarkers">
+      <year class="2018"></year>
       <year class="2017"></year>
       <year class="2016"></year>
       <year class="2015"></year>
