Adding a Lightbox - style later

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <timeline>
     <div class="line"></div>
     <div class="yearmarkers">
-      <year class="2018"></year>
+      <year href="#text1" class="2018"></year>
       <year class="2017"></year>
       <year class="2016"></year>
       <year class="2015"></year>
@@ -86,6 +86,10 @@
       <year class="1983"></year>
     </div>
   </timeline>
+
+  <lightbox id="lightbox">
+    <p id="text1">This be lightbox</p>
+  </lightbox>
 
   <script type="text/javascript">
 
