Let's try that Lightbox

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
 
   <header>
-    <h1>Gábor Hoffer</h1>
+    <h1 href="#text1">Gábor Hoffer</h1>
     <h2>product design lead @ <a href="http://prezi.com/" target="_blank">Prezi.com</a>
       <br />designer — manager — teacher — flame</h2>
     <h3><a href="https://www.linkedin.com/in/hoffergabor" target="_blank">LinkedIn</a> —
@@ -48,7 +48,7 @@
   <timeline>
     <div class="line"></div>
     <div class="yearmarkers">
-      <year href="#text1" class="2018"></year>
+      <year class="2018"></year>
       <year class="2017"></year>
       <year class="2016"></year>
       <year class="2015"></year>
