--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
 
   <header>
-    <h1 href="#text1">Gábor Hoffer</h1>
+    <h1 href="#lightbox">Gábor Hoffer</h1>
     <h2>product design lead @ <a href="http://prezi.com/" target="_blank">Prezi.com</a>
       <br />designer — manager — teacher — flame</h2>
     <h3><a href="https://www.linkedin.com/in/hoffergabor" target="_blank">LinkedIn</a> —
@@ -88,7 +88,7 @@
   </timeline>
 
   <lightbox id="lightbox">
-    <p id="text1">This be lightbox</p>
+    <p>This be lightbox</p>
   </lightbox>
 
   <script type="text/javascript">
