--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 <body>
 
   <header>
-    <h1 href="#lightbox">Gábor Hoffer</h1>
+    <h1>Gábor Hoffer</h1>
     <h2>product design lead @ <a href="http://prezi.com/" target="_blank">Prezi.com</a>
-      <br />designer — manager — teacher — flame</h2>
+      <br />designer — manager — teacher — <a href="#lightbox">flame</a></h2>
     <h3><a href="https://www.linkedin.com/in/hoffergabor" target="_blank">LinkedIn</a> —
         <a href="https://medium.com/@hoffergabor" target="_blank">Medium</a> —
         <a href="https://twitter.com/@hoffergabor" target="_blank">Twitter</a> —
