--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   </timeline>
 
   <lightbox id="lightbox">
-    <p>This be lightbox</p>
+    <a href="#_" class="lightbox" id="img1">This be lightbox</a>
   </lightbox>
 
   <script type="text/javascript">
