Stupid hack but probably works

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <timeline>
     <div class="line"></div>
     <div class="yearmarkers">
-      <year class="2018"></year>
+      <year class="2018" style="top: 0; height: 50vh;"></year>
       <year class="2017"></year>
       <year class="2016"></year>
       <year class="2015"></year>
