--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
           if (reference.lightbox == "yes") {
             console.log("Creating lightbox for " + reference.name);
-            $( "." + lightboxes ).append(
+            $( ".lightboxes" ).append(
               "<lightbox id='" + reference.name +
               "'><a href='#'>" + reference.name +
               "</a></lightbox>" );
