--- a/index.html
+++ b/index.html
@@ -121,9 +121,12 @@
               " era-" + reference.era +
               " odd-" + i % 2 + " " + reference.type +
               "'><date>" + reference.date +
-              "</date><h3>" + reference.name + "</h3><p>" + reference.desc +
-              " <a href='" + reference.url + "' target='_blank'>" +
-              "</p></reference>" );
+              "</date><h3>" + reference.name + "</h3><p>" + reference.desc );
+              if (reference.lightbox == "yes") {
+                $( "." + reference.year ).append(
+                "<a href='" + reference.id + ">link</a>" );
+              }
+            $( "." + reference.year ).append("</p></reference>" );
           }
           else {
             $( "." + reference.year ).append(
@@ -137,7 +140,7 @@
           if (reference.lightbox == "yes") {
             console.log("Creating lightbox for " + reference.name);
             $( ".lightboxes" ).append(
-              "<lightbox id='" + reference.name +
+              "<lightbox id='" + reference.id +
               "'><a href='#'>" + reference.name +
               "</a></lightbox>" );
           }
