--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           }
 
           if (reference.lightbox == "yes") {
-            console.log("Creating lightbox for " + reference.name);
+            console.log("+ Creating lightbox for " + reference.name);
             $( ".lightboxes" ).append(
               "<lightbox id='" + reference.id +
               "'><a href='#'>" + reference.name +
