Maybe this was the problem

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               if (reference.lightbox == "yes") {
                 console.log("There's a lightbox link here");
                 $( "." + reference.year ).append(
-                "<a href='" + reference.id + ">link</a>" );
+                "<a href='" + reference.id + "'>link</a>" );
               }
             $( "." + reference.year ).append("</p></reference>" );
           }
