--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
           if (reference.era == "") {
             if (reference.lightbox == "yes") {
               console.log("There's a lightbox link here");
-              lightboxHTML = "<a href='" + reference.id + "'>link</a>" );
+              lightboxHTML = "<a href='" + reference.id + "'>link</a>";
             }
             else {
-              lightboxHTML = ""
+              lightboxHTML = "";
             }
             $( "." + reference.year ).append(
               "<reference class='offset-" + reference.month +
