--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           if (reference.era == "") {
             if (reference.lightbox == "yes") {
               console.log("There's a lightbox link here");
-              lightboxHTML = "<a href='" + reference.id + "'>link</a>";
+              lightboxHTML = "<a href='#" + reference.id + "'>link</a>";
             }
             else {
               lightboxHTML = "";
