--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               " era-" + reference.era +
               " odd-" + i % 2 + " " + reference.type +
               "'><date>" + reference.date +
-              "</date><img src="https://source.unsplash.com/random">" +
+              "</date><img src='https://source.unsplash.com/random'>" +
               "<h3>" + reference.name + "</h3><p>" + reference.desc + lightboxHTML +
               "</p></reference>" );
           }
