--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
   </header>
 
   <timeline id="parallaxTimeline">
-    <div class="line"></div>
+    <div data-depth="0" class="line"></div>
     <div class="yearmarkers">
       <year data-depth="0.2" class="2018" style="top: 0; height: 50vh;"></year>
       <year data-depth="0.4" class="2017"></year>
-      <year class="2016"></year>
+      <year data-depth="1" class="2016"></year>
       <year class="2015"></year>
       <year class="2014"></year>
       <year class="2013"></year>
