--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
 </head>
 <body>
 
-  <header>
-    <h1>Gábor Hoffer</h1>
-    <h2>product design lead @ <a href="http://prezi.com/" target="_blank">Prezi.com</a>
+  <header id="parallaxTimeline">
+    <h1 data-depth="0.1">Gábor Hoffer</h1>
+    <h2 data-depth="0.2">product design lead @ <a href="http://prezi.com/" target="_blank">Prezi.com</a>
       <br />designer — manager — teacher — flame</h2>
-    <h3><a href="https://www.linkedin.com/in/hoffergabor" target="_blank">LinkedIn</a> —
+    <h3 data-depth="0.3"><a href="https://www.linkedin.com/in/hoffergabor" target="_blank">LinkedIn</a> —
         <a href="https://medium.com/@hoffergabor" target="_blank">Medium</a> —
         <a href="https://twitter.com/@hoffergabor" target="_blank">Twitter</a> —
         <a href="mailto:hoffergabor@gmail.com" target="_blank">Email</a></h3>
   </header>
 
-  <timeline id="parallaxTimeline">
+  <timeline>
     <div data-depth="0" class="line"></div>
     <div class="yearmarkers">
-      <year data-depth="0.2" class="2018" style="top: 0; height: 50vh;"></year>
-      <year data-depth="0.4" class="2017"></year>
-      <year data-depth="1" class="2016"></year>
+      <year class="2018" style="top: 0; height: 50vh;"></year>
+      <year class="2017"></year>
+      <year class="2016"></year>
       <year class="2015"></year>
       <year class="2014"></year>
       <year class="2013"></year>
