Scene is not right

--- a/index.html
+++ b/index.html
@@ -159,8 +159,7 @@
 
     }
 
-    var scene = $( ".2018" );
-    var parallaxInstance = new Parallax(scene);
+    var parallaxInstance = new Parallax($( ".2018" ));
 
   </script>
 
