Maybe this is better

--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
 
     }
 
-    var parallaxInstance = new Parallax($( ".2018" ));
+    var scene = getElementsByClassName("2018")
+    var parallaxInstance = new Parallax(scene);
 
   </script>
 
