--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
     }
 
-    var scene = getElementsByClassName("2018")
+    var scene = document.getElementsByClassName("2018");
     var parallaxInstance = new Parallax(scene);
 
   </script>
