--- a/index.html
+++ b/index.html
@@ -160,7 +160,10 @@
     }
 
     var scene = document.getElementById('2018');
-    var parallaxInstance = new Parallax(scene);
+    setTimeout(function (){
+      var parallaxInstance = new Parallax(scene);
+    }, 1000);
+
 
   </script>
 
