--- a/index.html
+++ b/index.html
@@ -160,6 +160,9 @@
       var scene = document.getElementById('2018');
       var parallaxInstance = new Parallax(scene);
 
+      var scene = document.getElementById('2017');
+      var parallaxInstance = new Parallax(scene);
+
     }
 
   </script>
