--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             $( "." + reference.year ).append(
               "<reference data-depth='0." + reference.importance +
               "' style='transform: scale(1." + reference.importance - 1 +
-              ", 1." + reference.importance -1 + ");"
+              ", 1." + reference.importance -1 + ");" + 
               "' class='offset-" + reference.month +
               " era-" + reference.era +
               " odd-" + i % 2 + " " + reference.type +
