--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
   <!-- tabletop.js - https://github.com/jsoma/tabletop - loads data from Google Spreadsheets -->
   <script src="js/tabletop.js" type="text/javascript"></script>
 
-  <!-- parallax.js - http://matthew.wagerfield.com/parallax/ - creates a device-driven parallax effect -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
-
 </head>
 <body>
 
@@ -51,10 +48,10 @@
   <timeline>
     <div data-depth="0" class="line"></div>
     <div class="yearmarkers">
-      <year id="2018" class="2018" style="top: 0; height: 50vh;"></year>
-      <year id="2017" class="2017"></year>
-      <year id="2016" class="2016"></year>
-      <year id="2015" class="2015"></year>
+      <year class="2018" style="top: 0; height: 50vh;"></year>
+      <year class="2017"></year>
+      <year class="2016"></year>
+      <year class="2015"></year>
       <year class="2014"></year>
       <year class="2013"></year>
       <year class="2012"></year>
@@ -127,8 +124,7 @@
               lightboxHTML = "";
             }
             $( "." + reference.year ).append(
-              "<reference data-depth='0." + reference.importance +
-              "' class='offset-" + reference.month +
+              "<reference class='offset-" + reference.month +
               " era-" + reference.era +
               " odd-" + i % 2 + " " + reference.type +
               "'><date>" + reference.date +
@@ -157,15 +153,6 @@
       } else {
         console.warn('No references found in spreadsheet.');
       }
-
-      var scene = document.getElementById('2018');
-      var parallaxInstance = new Parallax(scene);
-      var scene = document.getElementById('2017');
-      var parallaxInstance = new Parallax(scene);
-      var scene = document.getElementById('2016');
-      var parallaxInstance = new Parallax(scene);
-      var scene = document.getElementById('2015');
-      var parallaxInstance = new Parallax(scene);
 
     }
 
