--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
     </lightbox>
   </lightboxes>
 
+  <footer>
+    <h2>Well, you actually scrolled down here... Nice!</h2>
+    <h3>I made this website myself with the help of the following stuff: TBD</h3>
+  </footer>
+
   <script type="text/javascript">
 
     less.watch();
