--- a/index.html
+++ b/index.html
@@ -85,12 +85,6 @@
       <year class="1984"></year>
       <year class="1983"></year>
     </div>
-
-    <footer>
-      <h2>Well, you actually scrolled down here... Nice!</h2>
-      <h3>I made this website myself with the help of the following stuff: TBD</h3>
-    </footer>
-    
   </timeline>
 
   <lightboxes class="lightboxes">
@@ -98,6 +92,11 @@
       <a href="#_" class="lightbox" id="img1">This be lightbox</a>
     </lightbox>
   </lightboxes>
+
+  <footer style="top: 2600vh;">
+    <h2>Well, you actually scrolled down here... Nice!</h2>
+    <h3>I made this website myself with the help of the following stuff: TBD</h3>
+  </footer>
 
   <script type="text/javascript">
 
