--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
   <footer style="top: 2600vh;">
     <h2>Well, you actually scrolled down here... Nice!</h2>
-    <h3>I made this website myself with the help of the following stuff: TBD</h3>
+    <h3>I made this website myself with the help of Atom, JQuery, HTMl, LESS, Tabletop.js and GitHub.</h3>
   </footer>
 
   <script type="text/javascript">
