--- a/index.html
+++ b/index.html
@@ -128,12 +128,19 @@
             else {
               lightboxHTML = "";
             }
+            if (reference.image == "yes") {
+              console.log("There's an image here");
+              imageHTML = "<img src='" + reference.image + "'>";
+            }
+            else {
+              imageHTML = "";
+            }
             $( "." + reference.year ).append(
               "<reference class='offset-" + reference.month +
               " era-" + reference.era +
               " odd-" + i % 2 + " " + reference.type +
               "'><date>" + reference.date +
-              "</date><img src='https://source.unsplash.com/random'>" +
+              "</date>" + imageHTML +
               "<h3>" + reference.name + "</h3><p>" + reference.desc + lightboxHTML +
               "</p></reference>" );
           }
