--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             }
             if (reference.image == "yes") {
               console.log("There's an image here");
-              imageHTML = "<img src='" + reference.image + "'>";
+              imageHTML = "<img src='img/" + reference.image + "'>";
             }
             else {
               imageHTML = "";
