--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             else {
               lightboxHTML = "";
             }
-            if (reference.image == "yes") {
+            if (reference.image != "") {
               console.log("There's an image here");
               imageHTML = "<img src='img/" + reference.image + "'>";
             }
